Fix issue with social icons wrapping to left at larger screen widths

--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -44,6 +44,7 @@
 .contactInfo {
   text-align: center;
   font-weight: 300;
+  clear: both;
 }
 
 .socialIcons {
